k8s/argo/rollout/host-level-traffic-routing/shipping.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: shipping
  namespace: dev
  labels:
    app: shipping
spec:
  selector:
    matchLabels:
      app: shipping # has to match .spec.template.metadata.labels
  revisionHistoryLimit: 1
  #replicas: 4
  strategy:
    canary:
      stableService: shipping-stable-service
      canaryService: shipping-canary-service
      trafficRouting:
        managedRoutes:
          - name: set-version
        istio:
          virtualService:
            name: shipping-vsvc
            routes:
              - primary # optional if there is a single route in VirtualService, required otherwise
      steps:
        - setCanaryScale:
            weight: 50
        - setHeaderRoute:
            name: set-version
            match:
              - headerName: Version
                headerValue:
                  prefix: 'Shipping-Canary'
        - pause: {}
        #            duration: 1m #Remove this line when releasing compatibility change.
        - setHeaderRoute:
            name: set-version
  template:
    metadata:
      labels:
        app: shipping # has to match .spec.selector.matchLabels
    spec:
      containers:
        - name: shipping
          image: niazovd/shipping:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shipping-vsvc
  namespace: dev
spec:
  hosts:
    - 'dev.koblesystems.com'
  gateways:
    - gateway
  http:
    - name: primary
      match:
        - uri:
            prefix: /shipping
          ignoreUriCase: true #case-Insensitive
      route:
        - destination:
            host: shipping-stable-service # referenced in canary.stableService
          weight: 100
        - destination:
            host: shipping-canary-service # referenced in canary.canaryService
          weight: 0
---
apiVersion: v1
kind: Service
metadata:
  name: shipping-stable-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: shipping
  ports:
    - port: 80 #This port is the port which belongs to ClusterIP which will be exposed
      targetPort: 80
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: shipping-canary-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: shipping
  ports:
    - port: 80 #This port is the port which belongs to ClusterIP which will be exposed
      targetPort: 80
      protocol: TCP
      name: http
